# asreview-minimal

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: main.yml
src/asreview/: __init__.py
